# gobbledegook

./: README.md
include/: DBusMethod.h  GattCharacteristic.h  GattDescriptor.h  GattInterface.h  GattService.h  GattUuid.h  Gobbledegook.h  Server.h
src/: DBusInterface.cpp  DBusMethod.cpp  DBusObject.cpp  GattCharacteristic.cpp  GattDescriptor.cpp  GattInterface.cpp  GattProperty.cpp  GattService.cpp  Gobbledegook.cpp  HciAdapter.cpp  HciAdapter.h  HciSocket.cpp  Init.cpp  Makefile.am  Makefile.in  Mgmt.cpp  Mgmt.h  Server.cpp  Server.h  ServerUtils.cpp  Utils.cpp  standalone.cpp
